[package]
name = "windows-key-listener"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Zach Connelly"]
description = "Listen to arbitrary key chords on Windows."

[dependencies]
lazy_static = "1.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }